--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+	<meta name="robots" content="index, follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<link href="//www.GrocerEase.com/static/v2802/mw/css/mw_lib.min.css?v=2802" rel="stylesheet" type="text/css" />
 	<link href="//www.GrocerEase.com/static/v2802/mw/css/bb_mw.min.css?v=2802" rel="stylesheet" type="text/css" />
